 * updated timestamp handling and generation
 * fixed issue with itunes categories
 * fixed itunes subtitle/summary
 * fixed entry assignment bug
 * added support for the payload module
 * added support for xhtml:div elements
 * dc:date now preempts pubDate
 * now correctly strips out wrapper div elements from text constructs
 * reorganized some of the helper modules
 * made some portions of url normalization case insensitive
 * fixed issue with filename handling on Windows
== FeedTools 0.2.22
 * fixed another atom generation error
== FeedTools 0.2.21
 * fixed atom generation error
 * added summary element to generated atom xml
 * added warning message for improperly set up database tables
== FeedTools 0.2.20
 * fixed some atom namespace bugs
 * added a summary method to feed items
 * added some support for the apple-wallpapers elements
== FeedTools 0.2.19
 * lousy encoding support (as opposed to none at all)
 * xml processing instruction now correctly prefixes generated feeds
 * attributes are escaped properly when generating feeds
 * uppercase html is no longer sanitized for not being in the whitelist
 * added alias method for assigning to entries
 * changed the xpath querying to be much, much more DRY
 * find_node and find_all_nodes are actually useful now
 * full case-insensitivity implemented for the xpath helper methods
 * fixed bug in tests where some assertion failures could affect other tests
 * fixed bug where the feed item author would sometimes be parsed incorrectly
 * fixed bug where the convertLineBreaks element would break feed entries
 * default (i.e. preferred) methods will be Atom-style instead of RSS-style
 * default feed output format changed to Atom 1.0
 * itunes namespace corrected
 * fixed images property when dealing with atom
 * fixed atom link property
 * improved timestamp handling
 * whitespace nodes now ignored by REXML
 * added option to disable timestamp estimation
 * added option to limit time-to-live to some upper maximum